gl33-master/src/test/deca/syntax/invalid/others/parentheseEnPlusPrint2.deca
/*
Test sur l'ajout de plusieurs parenthèses au début de print

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

{
    print(("Hello");
}
